[package]
name = "anglerfish-iterator-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui_config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.88"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["preserve_order"] }
toml = "0.8.22"
